<resources>
    <string name="app_name">P2P Camera</string>
    <string name="menu_settings">Settings</string>
    <string name="gateways_discovered">Gateways discovered: %d</string>
    <string name="client_count">Clients connected: %d</string>
    <string name="unknown_command">Unknown command: %d</string>
    <string name="binding_info">Bound to %s</string>
    <string name="mapping_info">Listening on %s:%d</string>
    <string name="already_mapped_info">Already mapped on %1$s:%2$d by %3$s</string>
    <string name="mapping_error">Error mapping a port: %s</string>

    <!-- Authorization UI -->
    <string name="authorization_request">Do you want to grant \'%s\' access to this device cameras?</string>
    <string name="allow_button">Allow once</string>
    <string name="allow_always_button">Allow always</string>
    <string name="deny_button">Deny</string>
    <string name="deny_always_button">Deny always</string>

    <!-- Preferences -->
    <string name="title_activity_settings">Application Settings</string>

    <!-- Network Preferences Section -->
    <string name="network_header">Network</string>

    <!-- Network: Private Key Preference -->
    <string name="pref_key_port" translatable="false">port</string>
    <string name="port">Port number</string>
    <string name="port_default">(default)</string>
    <string name="port_error">Invalid port number. Should be an integer 1..65535</string>

    <!-- Security Preferences Section -->
    <string name="security_header">Security</string>

    <!-- Security: Private Key Preference -->
    <string name="pref_key_private_key" translatable="false">private_key</string>
    <string name="private_key">Private key</string>
    <string name="title_private_key_password_request">Enter keystore password</string>
    <string name="hint_private_key_password">Password</string>
    <string name="title_private_key_removal_request">Do you really want to remove the private key?</string>
    <string name="message_private_key_removal_request">This operation cannot be undone. You will have to import a private key again in order to enable traffic ciphering</string>
    <string name="private_key_summary_click_to_load">Tap here to choose a private key file to import</string>
    <string name="private_key_summary_imported">Private key imported. Tap here to remove.</string>
    <string name="private_key_summary_not_found">Chosen file not found</string>
    <string name="private_key_summary_invalid">Invalid private key file chosen</string>
    <string name="private_key_summary_error">Something went wrong while loading private key</string>
    <string name="private_key_summary_password">Unable to recover a private key. Probably password is wrong</string>
    <string name="private_key_summary_storing">Error installing private key</string>
    <string name="private_key_summary_removing">Private key entry cannot be removed</string>

    <!-- User Management Preferences Section -->
    <string name="user_management_header">User management</string>

    <!-- User Management White list -->
    <string name="pref_key_white_list" translatable="false">white_list</string>
    <string name="white_list">White list</string>

    <!-- User Management Black list -->
    <string name="pref_key_black_list" translatable="false">black_list</string>
    <string name="black_list">Black list</string>

    <!-- User Management One-time authorizations -->
    <string name="pref_key_onetimers" translatable="false">onetimers</string>
    <string name="onetimers">Others</string>

    <string name="message_remove_from_list">Choose a user to remove from the list</string>
    <string name="title_remove_from_list_confirmation">Delete the selected user?</string>
    <string name="message_remove_from_list_confirmation">Grants will be asked next time the user attempts to gain access to the service</string>

    <string name="title_restart_required">App restart required</string>
    <string name="message_restart_required">You\'ve just changed preferences critical to currently running services. Please restart the app for these changes to take effect</string>
</resources>
